#810300 by Jeff Burnz | mgifford: Fixed Resizing and Zooming can make text unreadable.

--- a/css/colors.css
+++ b/css/colors.css
@@ -6,6 +6,7 @@ body {
   background-color: #161617;
   color: #ffffff;
 }
+html,
 #page-wrapper,
 body.overlay {
   background-color: #ffffff;
